--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Homepage of Arnoud"
+title                    : "Homepage of Jie Xie"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "Jie Xie"
 description              : &description "personal description"
 url                      : https://jerry-jie-xie.github.io/homepage # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
