--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Homepage of Jie Xie"
 title_separator          : "-"
 name                     : &name "Jie Xie"
 description              : &description "personal description"
-url                      : https://jerry-jie-xie.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://Jerry-Jie-Xie.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "Jerry-Jie-Xie/jerry-jie-xie.github.io"
+repository               : "Jerry-Jie-Xie/Jerry-Jie-Xie.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
