--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Jie Xie"
-  avatar           : "profile.png"
+  avatar           : "arnoud两寸.jpg"
   bio              : "Associate Professor of IoT at Jiangnan University"
   location         : "Wuxi, Jiangsu, China"
   employer         :
