--- a/_config.yml
+++ b/_config.yml
@@ -81,9 +81,9 @@ analytics:
 # Site Author
 author:
   name             : "Jie Xie"
-  avatar           : "arnoud两寸.jpg"
-  bio              : "Associate Professor of IoT at Jiangnan University"
-  location         : "Wuxi, Jiangsu, China"
+  avatar           : "arnoud_my.jpg"
+  bio              : "Associate Professor at Nanjing Normal University"
+  location         : "Nanjing, Jiangsu, China"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com.au/citations?user=S6Smw4cAAAAJ&hl=zh-CN"
