change portfilo to student

--- a/_config.yml
+++ b/_config.yml
@@ -227,10 +227,10 @@ defaults:
       author_profile: true
       share: true
       comments: true
-  # _portfolio
+  # _students
   - scope:
       path: ""
-      type: portfolio
+      type: student
     values:
       layout: single
       author_profile: true
