--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,10 +6,10 @@ main:
   - title: "Teaching"
     url: /teaching/    
     
-  - title: "Students"
+  - title: "Projects"
     url: /students/
   
-  - title: "Projects"
+  - title: "Grants"
     url: /projects/
   
 
