--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,10 +7,10 @@ main:
     url: /teaching/    
     
   - title: "Projects"
-    url: /students/
+    url: /projects/
   
   - title: "Grants"
-    url: /projects/
+    url: /grants/
   
 
     
